# Homework-21.2

./: catalog_1.html  category.html  contact.html  glavn.html  pyproject.toml  style.css  web.py
