[tool.poetry]
name = "homework-21-2"
version = "0.1.0"
description = ""
authors = ["Konstantin Antonov <kostaantonov59@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_21"}]

[tool.poetry.dependencies]
python = "^3.12"
self = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
